force-app/main/default/objects/maps__AdvRoute__c/maps__AdvRoute__c.object-meta.xml
<CustomObject>
    <description>This will be used to group a set of Advanced Route waypoints into a single route</description>
    <label>Maps Advanced Route</label>
    <nameField>
        <label>Maps Advanced Route Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Advanced Routes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>