force-app/main/default/objects/maps__AdvRoute__c/fields/maps__AdvRouteTemplateUser__c.field-meta.xml
<CustomField>
    <fullName>maps__AdvRouteTemplateUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The is the Advanced Route template user associated to this route</description>
    <label>Maps Advanced Route Template User</label>
    <referenceTo>maps__AdvRouteTemplateUser__c</referenceTo>
    <relationshipLabel>Maps Advanced Routes</relationshipLabel>
    <relationshipName>AdvRoutes</relationshipName>
    <type>Lookup</type>
</CustomField>