force-app/main/default/objects/maps__AdvRoute__c/fields/maps__DrivingTime__c.field-meta.xml
<CustomField>
    <fullName>maps__DrivingTime__c</fullName>
    <formula>TEXT(FLOOR(maps__DrivingTimeMinutes__c / 60)) + &apos; hr &apos; + TEXT(CEILING(MOD(maps__DrivingTimeMinutes__c, 60))) + &apos; min&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driving Time</label>
    <type>Text</type>
</CustomField>