force-app/main/default/objects/maps__AdvRoute__c/fields/maps__DrivingTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>maps__DrivingTimeMinutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Driving Time (minutes)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>