force-app/main/default/objects/maps__AdvRoute__c/fields/maps__ModifiedDrivingTime__c.field-meta.xml
<CustomField>
    <fullName>maps__ModifiedDrivingTime__c</fullName>
    <label>Modified Driving Time (minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>