force-app/main/default/objects/maps__AdvRoute__c/fields/maps__ModifiedRouteLength__c.field-meta.xml
<CustomField>
    <fullName>maps__ModifiedRouteLength__c</fullName>
    <label>Modified Route Length (miles)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>