force-app/main/default/objects/maps__AdvRoute__c/fields/maps__Options__c.field-meta.xml
<CustomField>
    <fullName>maps__Options__c</fullName>
    <description>This is a JSON object of options used by Core Maps</description>
    <label>Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>