force-app/main/default/objects/maps__AdvRoute__c/fields/maps__RouteDate__c.field-meta.xml
<CustomField>
    <fullName>maps__RouteDate__c</fullName>
    <description>This is the date of the route</description>
    <label>Route Date</label>
    <type>Date</type>
</CustomField>