force-app/main/default/objects/maps__AdvRoute__c/fields/maps__RouteEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__RouteEndTime__c</fullName>
    <label>Route End Time</label>
    <type>DateTime</type>
</CustomField>