force-app/main/default/objects/maps__AdvRoute__c/fields/maps__RouteLengthKm__c.field-meta.xml
<CustomField>
    <fullName>maps__RouteLengthKm__c</fullName>
    <formula>maps__RouteLengthMi__c * 1.60934</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Length (km)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>