force-app/main/default/objects/maps__AdvRoute__c/fields/maps__RouteLengthMi__c.field-meta.xml
<CustomField>
    <fullName>maps__RouteLengthMi__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Distance of route</description>
    <label>Route Length (miles)</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>