force-app/main/default/objects/maps__AdvRoute__c/fields/maps__RouteStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__RouteStartTime__c</fullName>
    <label>Route Start Time</label>
    <type>DateTime</type>
</CustomField>