force-app/main/default/objects/maps__AdvRoute__c/fields/maps__TotalBreakTime__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalBreakTime__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Break Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>