force-app/main/default/objects/maps__AdvRoute__c/fields/maps__TotalTime__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>All Travel time, wait time, order service time, and break service time.</description>
    <label>Total Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>