force-app/main/default/objects/maps__AdvRoute__c/fields/maps__TotalViolationTime__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalViolationTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total violation time of the route</description>
    <label>Total Violation Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>