force-app/main/default/objects/maps__AdvRoute__c/fields/maps__TotalWaitTime__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalWaitTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total wait time for route</description>
    <label>Total Wait Time</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>