force-app/main/default/objects/maps__AdvRoute__c/fields/maps__ViolatedConstraints__c.field-meta.xml
<CustomField>
    <fullName>maps__ViolatedConstraints__c</fullName>
    <label>Violated Constraints</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>